chore(broker): fix some sonar issues